--- a/.github/workflows/Automerge.yml
+++ b/.github/workflows/Automerge.yml
@@ -15,4 +15,4 @@ jobs:
       - name: automerge						     # Pull Request AutoMerge 수행
         uses: "pascalgn/automerge-action@v0.15.6"		     # pascalgn/automerge-action@v0.15.6 Action 사용
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"	             # GITHUB_TOKEN Secrets 환경변수를 이용하여 GITHUB_TOKEN 환경변수 정의
+          GITHUB_TOKEN: "${{ secrets.GIT_HUB_TOKEN }}"	             # GITHUB_TOKEN Secrets 환경변수를 이용하여 GITHUB_TOKEN 환경변수 정의
